--- a/src/advice.html
+++ b/src/advice.html
@@ -30,7 +30,7 @@
 
     <div class="page-content">
         <div class="container">
-            <div class="advice-banner">
+            <div class="advice-banner wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">
                 <div class="advice-banner__text-block">
                     <h1>Нужен&nbsp;<span class="main-color">совет?</span></h1>
                     <p class="advice-banner__text">Мы поделимся нашим опытом, как решить ваши бизнес-задачи любой сложности</p>
@@ -46,7 +46,7 @@
                 </div>
             </div>
 
-            <div class="imaged-block">
+            <div class="imaged-block wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">
                 <div class="imaged-block__text-block">
                     <h2><span class="main-color">Совет</span> — это консультация эксперта VSignal</h2>
                     <p>В процессе которой мы решаем ваши маркетинговые либо бизнес-задачи.</p>
@@ -54,17 +54,17 @@
                 </div>
                 <div class="imaged-block__image">
                     <picture style="max-width: 440px">
-                        <source srcset="images/content/advice/img_1_desk.webp, images/content/advice/img_1_desk@2x.webp 2x" media="(min-width: 768px)" type="image/webp">
+                        <!--<source srcset="images/content/advice/img_1_desk.webp, images/content/advice/img_1_desk@2x.webp 2x" media="(min-width: 768px)" type="image/webp">-->
                         <source srcset="images/content/advice/img_1_desk.png, images/content/advice/img_1_desk@2x.png 2x" media="(min-width: 768px)">
-                        <source srcset="images/content/advice/img_1_mob.webp, images/content/advice/img_1_mob@2x.webp 2x" type="image/webp">
+                        <!--<source srcset="images/content/advice/img_1_mob.webp, images/content/advice/img_1_mob@2x.webp 2x" type="image/webp">-->
                         <img src="images/content/advice/img_1_mob.png" srcset="images/content/advice/img_1_mob@2x.png 2x" alt="alt">
                     </picture>
                 </div>
             </div>
 
-            <h2>В каких случаях VSignal<br> будет <span class="main-color">полезным</span></h2>
+            <h2 class="wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">В каких случаях VSignal<br> будет <span class="main-color">полезным</span></h2>
 
-            <div class="scroller">
+            <div class="scroller wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">
                 <div class="js-scroller swiper-container">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
@@ -102,7 +102,7 @@
                 </div>
             </div>
 
-            <div class="imaged-block">
+            <div class="imaged-block wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">
                 <div class="imaged-block__text-block">
                     <h2>Почему стоит довериться нам?</h2>
                     <p>
@@ -115,9 +115,9 @@
                 </div>
             </div>
 
-            <h2 class="text-center">Кто наши эксперты?</h2>
+            <h2 class="text-center wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">Кто наши эксперты?</h2>
 
-            <div class="experts">
+            <div class="experts wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">
                 <div class="experts__item">
                     <div class="person">
                         <picture class="person__image">
@@ -156,13 +156,13 @@
                 </div>
             </div>
 
-            <h2>Мы помогаем корпорациям, <span class="main-color">среднему</span>&nbsp;и&nbsp;<span class="main-color">малому</span> бизнесу</h2>
+            <h2 class="wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">Мы помогаем корпорациям, <span class="main-color">среднему</span>&nbsp;и&nbsp;<span class="main-color">малому</span> бизнесу</h2>
 
-            <div class="text-block-660">
+            <div class="text-block-660 wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">
                 <p>Поработали с крупнейшими страховыми компаниями, банками, ритейл, автомобильными брендами, государственными проектами, eСommerce, СМИ и другими.</p>
             </div>
 
-            <div class="logos">
+            <div class="logos wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">
                 <img src="images/content/logos/abajjur.jpg" srcset="images/content/logos/abajjur@2x.jpg 2x" alt="alt">
                 <img src="images/content/logos/profildoors.jpg" srcset="images/content/logos/profildoors@2x.jpg 2x" alt="alt">
                 <img src="images/content/logos/dverishop-logo.jpg" srcset="images/content/logos/dverishop-logo@2x.jpg 2x" alt="alt">
@@ -177,9 +177,9 @@
                 <img src="images/content/logos/digital-razor.jpg" srcset="images/content/logos/digital-razor@2x.jpg 2x" alt="alt">
             </div>
 
-            <h2>Как это работает?</h2>
+            <h2 class="wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">Как это работает?</h2>
 
-            <div class="cols-3">
+            <div class="cols-3 wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">
                 <div class="col">
                     <div class="feature">
                         <p class="feature__num">01</p>
@@ -209,9 +209,9 @@
                 </div>
             </div>
 
-            <h2>Формат работы</h2>
+            <h2 class="wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">Формат работы</h2>
 
-            <div class="tarifs">
+            <div class="tarifs wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">
                 <div class="tarifs__item">
                     <div class="tarif">
                         <div class="tarif__icon"><img src="images/icons/tarifs/tarif_1.svg" alt=""></div>
@@ -278,6 +278,14 @@
 
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/scroller.js"></script>
+
+    <script src="js/wow.min.js"></script>
+    <script>
+        new WOW().init({
+            mobile: false,
+            offset: 300
+        });
+    </script>
 </body>
 
 </html>
