--- a/src/about.html
+++ b/src/about.html
@@ -30,13 +30,13 @@
 
     <div class="page-content">
         <div class="container">
-            <h1>Мы — <span class="main-color">VSignal</span></h1>
+            <h1 class="wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">Мы — <span class="main-color">VSignal</span></h1>
 
-            <div class="text-block-660">
+            <div class="text-block-660 wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.8s">
                 <p>Консалтинговое агентство, проектируем сложные сайты, настраиваем сквозную аналитику, оптимизируем расходы на рекламу, разрабатываем Digital стратегию.</p>
             </div>
 
-            <div class="scroller">
+            <div class="scroller wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="1.1s">
                 <div class="js-scroller swiper-container">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
@@ -81,13 +81,13 @@
                 </div>
             </div>
 
-            <h2>Говорим на языке бизнеса</h2>
+            <h2 class="wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">Говорим на языке бизнеса</h2>
 
-            <div class="text-block-730">
+            <div class="text-block-730 wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">
                 <p>Основываясь на данных в своей работе, мы анализируем, разрабатываем, интегрируем и создаём новое, чтобы обеспечить устойчивый результат и более глубокое взаимодействие с клиентом.</p>
             </div>
 
-            <div class="infographics">
+            <div class="infographics wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">
                 <div class="infographics__item">
                     <p class="infographics__title">15 лет</p>
                     <p>опыта</p>
@@ -106,7 +106,7 @@
                 </div>
             </div>
 
-            <div class="page-banner">
+            <div class="page-banner wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">
                 <picture>
                     <source srcset="images/content/about/banner_desk.jpg, images/content/about/banner_desk@2x.jpg 2x" media="(min-width: 1024px)">
                     <source srcset="images/content/about/banner_tablet.jpg, images/content/about/banner_tablet@2x.jpg 2x" media="(min-width: 768px)">
@@ -114,7 +114,7 @@
                 </picture>
             </div>
 
-            <div class="about-sign">
+            <div class="about-sign wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">
                 <p class="h3">Но мы делаем гораздо <span class="main-color">больше.</span></p>
                 <p class="color-grey">— Команда VSignal</p>
             </div>
@@ -130,6 +130,14 @@
 
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/scroller.js"></script>
+
+    <script src="js/wow.min.js"></script>
+    <script>
+        new WOW().init({
+            mobile: false,
+            offset: 300
+        });
+    </script>
 </body>
 
 </html>
