--- a/src/solution.html
+++ b/src/solution.html
@@ -31,13 +31,13 @@
     <div class="page-content">
         <div class="container">
             <section class="article-detail">
-                <h1>Медицинские услуги</h1>
+                <h1 class="wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">Медицинские услуги</h1>
 
-                <div class="text-block-660">
+                <div class="text-block-660 wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.8s">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
 
-                <div class="page-banner">
+                <div class="page-banner wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="1.1s">
                     <picture>
                         <source srcset="images/content/solution/banner_desk.jpg, images/content/solution/banner_desk@2x.jpg 2x" media="(min-width: 1024px)">
                         <source srcset="images/content/solution/banner_tablet.jpg, images/content/solution/banner_tablet@2x.jpg 2x" media="(min-width: 768px)">
@@ -46,7 +46,7 @@
                 </div>
 
                 <div class="cols-3">
-                    <div class="col">
+                    <div class="col wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">
                         <div class="feature">
                             <div class="feature__image"><img src="images/content/solution/icon_1.svg" alt="alt"></div>
                             <div class="feature__text-block">
@@ -55,7 +55,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.8s">
                         <div class="feature">
                             <div class="feature__image"><img src="images/content/solution/icon_2.svg" alt="alt"></div>
                             <div class="feature__text-block">
@@ -64,7 +64,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="1.1s">
                         <div class="feature">
                             <div class="feature__image"><img src="images/content/solution/icon_3.svg" alt="alt"></div>
                             <div class="feature__text-block">
@@ -76,12 +76,12 @@
                 </div>
 
                 <div class="imaged-block">
-                    <div class="imaged-block__text-block">
+                    <div class="imaged-block__text-block wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.8s">
                         <h2><span class="main-color">Развивайте</span> свою клинику</h2>
                         <p><b>не только сарафанным радио</b></p>
                         <p>Мы предоставляем все:<br> от разработки визуальной истории, которая подчеркивает уникальные возможности вашего бизнеса, до донесения вашей идеи на сайте, социальных сетях и других каналах для поиска новых клиентов.</p>
                     </div>
-                    <div class="imaged-block__image">
+                    <div class="imaged-block__image wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">
                         <picture>
                             <source srcset="images/content/solution/img_1_desk.jpg, images/content/solution/img_1_desk@2x.jpg 2x" media="(min-width: 1024px)">
                             <source srcset="images/content/solution/img_1_tablet.jpg, images/content/solution/img_1_tablet@2x.jpg 2x" media="(min-width: 768px)">
@@ -90,10 +90,10 @@
                     </div>
                 </div>
 
-                <h2>Что предлагаем мы?</h2>
+                <h2 class="wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">Что предлагаем мы?</h2>
 
                 <div class="cols-4">
-                    <div class="col">
+                    <div class="col wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">
                         <div class="feature_2">
                             <div class="feature_2__image"><img src="images/content/solution/icon_4.svg" alt="alt"></div>
                             <div class="feature_2__text-block">
@@ -102,7 +102,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.8s">
                         <div class="feature_2">
                             <div class="feature_2__image"><img src="images/content/solution/icon_5.svg" alt="alt"></div>
                             <div class="feature_2__text-block">
@@ -111,7 +111,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="1.1s">
                         <div class="feature_2">
                             <div class="feature_2__image"><img src="images/content/solution/icon_6.svg" alt="alt"></div>
                             <div class="feature_2__text-block">
@@ -120,7 +120,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="1.4s">
                         <div class="feature_2">
                             <div class="feature_2__image"><img src="images/content/solution/icon_7.svg" alt="alt"></div>
                             <div class="feature_2__text-block">
@@ -132,13 +132,13 @@
                 </div>
 
                 <div class="imaged-block">
-                    <div class="imaged-block__text-block">
+                    <div class="imaged-block__text-block wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.8s">
                         <h2>Как мы это делаем?</h2>
                         <p><b>Поиск и привлечение новых возможностей для продаж</b></p>
                         <p>Мы поможем вам позиционировать себя так, чтобы общаться с вашими потенциальными клиентами.</p>
                         <p>Обладая более чем 15-летним опытом маркетинга в технологической отрасли, VSignal имеет возможности для предоставления комплексных маркетинговых решений, которые помогут вам получить новые перспективы.</p>
                     </div>
-                    <div class="imaged-block__image">
+                    <div class="imaged-block__image wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">
                         <picture style="max-width: 440px">
                             <!--<source srcset="images/content/solution/img_2_desk.webp, images/content/solution/img_2_desk@2x.webp 2x" media="(min-width: 768px)" type="image/webp">-->
                             <source srcset="images/content/solution/img_2_desk.png, images/content/solution/img_2_desk@2x.png 2x" media="(min-width: 768px)">
@@ -163,8 +163,8 @@
             </section>
 
             <section class="cases-block">
-                <h2>Наши кейсы</h2>
-                <div class="cases-list">
+                <h2 class="wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">Наши кейсы</h2>
+                <div class="cases-list wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.8s">
                     <div class="cases-list__item">
                         <article class="case">
                             <a class="case__link" href="case.html">
@@ -208,6 +208,14 @@
     //= template/footer.html
 
     //= template/scripts.html
+
+    <script src="js/wow.min.js"></script>
+    <script>
+        new WOW().init({
+            mobile: false,
+            offset: 300
+        });
+    </script>
 </body>
 
 </html>
