--- a/src/cases.html
+++ b/src/cases.html
@@ -161,10 +161,11 @@
 
     <script src="js/wow.min.js"></script>
     <script>
-        new WOW().init({
+        wow = new WOW({
             mobile: false,
             offset: 300
         });
+        wow.init();
     </script>
 </body>
 
