--- a/src/solution.html
+++ b/src/solution.html
@@ -33,22 +33,25 @@
             <section class="article-detail">
                 <h1 class="wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">Медицинский маркетинг</h1>
 
-                <div class="vertical-indent wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.8s">
+                <div class="text-block-660 wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.8s">
                     <p>На рынке медицинских услуг, несмотря на многообразие существующих форм: амбулаторные услуги, стоматологии, санатории и узкоспециализированные клиники. Существует две общие проблемы их объединяющие.</p>
-                    <ol>
-                        <li>
-                            <b>Управленческая.</b><br>
-                            Когда один человек совмещает в себе много ролей.
+                </div>
+
+                <div class="cols-2 wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="1.1s">
+                    <div class="col">
+                        <p><b>1. Управленческая.</b></p>
+                        <p>
+                            Когда один человек совмещает в себе много ролей.<br>
                             Например: глав врач, он же руководитель организации и он же директор по маркетингу. С одной стороны это позволяет контролировать все процессы лично. С другой сильно тормозит развитие клиники и не даёт раскрыть весь
-                            возможный потенциал. В том числе по причине тотальной занятости руководителя. И здесь появляется следующая проблема.<br><br>
-                        </li>
-                        <li>
-                            <b>Кадровая.</b><br>
-                            Как только у руководителя кончается желание и время разбираться самостоятельно. Он нанимает маркетолога или агентство. Чаще всего пришедший специалист не имеет подтверждённого опыта работы в медицине и пытается переложить
+                            возможный потенциал. В том числе по причине тотальной занятости руководителя. И здесь появляется следующая проблема.</p>
+                    </div>
+                    <div class="col">
+                        <p><b>2. Кадровая.</b></p>
+                        <p>Как только у руководителя кончается желание и время разбираться самостоятельно. Он нанимает маркетолога или агентство. Чаще всего пришедший специалист не имеет подтверждённого опыта работы в медицине и пытается
+                            переложить
                             знания и инструменты из е-коммерс (один из самых популярных сегментов интернет-маркетинга) на данную сферу. Это приводит к весьма негативным результатам. Клиника получает: дорогой и неработающий сайт, неэффективную
-                            рекламу, полное непонимание о том сколько пациентов пришло и откуда и вопросы по эффективности потраченных денег и времени.
-                        </li>
-                    </ol>
+                            рекламу, полное непонимание о том сколько пациентов пришло и откуда и вопросы по эффективности потраченных денег и времени.</p>
+                    </div>
                 </div>
 
                 <div class="page-banner wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="1.1s">
