--- a/src/solution.html
+++ b/src/solution.html
@@ -33,7 +33,7 @@
             <section class="article-detail">
                 <h1 class="wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">Медицинский маркетинг</h1>
 
-                <div class="text-block-660 wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.8s">
+                <div class="vertical-indent wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.8s">
                     <p>На рынке медицинских услуг, несмотря на многообразие существующих форм: амбулаторные услуги, стоматологии, санатории и узкоспециализированные клиники. Существует две общие проблемы их объединяющие.</p>
                 </div>
 
